Mod : 주석을 직관적으로 추가